Initialized Vue project with dev environment compatibility.

--- a/server/src/main/resources/application.conf
+++ b/server/src/main/resources/application.conf
@@ -1,9 +1,13 @@
 ktor {
-    development = true
+    environment = ${JELLYFISH_ENV}
+    development = ${JELLYFISH_AUTORELOAD}
+
     deployment {
-        port = 8080
-        port = ${?PORT}
+        autoreload = ${JELLYFISH_AUTORELOAD}
+        port = ${JELLYFISH_PORT}
+        watch = [${JELLYFISH_MODULE}]
     }
+    
     application {
         modules = [ com.kamelia.jellyfish.ApplicationKt.module ]
     }
