Simplified accessing dev mode

--- a/server/src/main/resources/application.conf
+++ b/server/src/main/resources/application.conf
@@ -1,11 +1,9 @@
 ktor {
-    environment = ${JELLYFISH_ENV}
-    development = ${JELLYFISH_AUTORELOAD}
+    environment = production
+    environment = ${?JELLYFISH_ENV}
 
     deployment {
-        autoreload = ${JELLYFISH_AUTORELOAD}
-        port = ${JELLYFISH_PORT}
-        watch = [${JELLYFISH_MODULE}]
+        port = 8080
     }
     
     application {
