--- a/client/package.json
+++ b/client/package.json
@@ -15,12 +15,12 @@
     "axios": "^0.27.2",
     "fuse.js": "^6.6.2",
     "pinia": "^2.0.13",
-    "vue": "^3.2.35",
+    "vue": "^3.2.36",
     "vue-router": "^4.0.14"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.0",
-    "@types/node": "^17.0.35",
+    "@types/node": "^17.0.36",
     "@vitejs/plugin-vue": "^2.3.1",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^10.0.0",
@@ -32,8 +32,8 @@
     "prettier": "^2.5.1",
     "sass": "^1.52.1",
     "tailwindcss": "^3.0.24",
-    "typescript": "~4.6.3",
+    "typescript": "^4.7.2",
     "vite": "^2.9.5",
-    "vue-tsc": "^0.34.7"
+    "vue-tsc": "^0.34.17"
   }
 }
