Wire Liquibase in test context

--- a/server/src/main/resources/application.conf
+++ b/server/src/main/resources/application.conf
@@ -10,3 +10,7 @@ ktor {
         modules = [ com.kamelia.jellyfish.ApplicationKt.module ]
     }
 }
+
+liquibase {
+    master = "classpath:db/db.changelog-master.xml"
+}
