--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,7 @@
 project.version=0.1.0
 kotlin.version=1.7.0
-ktor.version=2.0.2
+ktor.version=2.0.3
+coroutines.version=1.6.3
 exposed.version=0.38.2
 postgresql.version=42.3.6
 liquibase.version=4.12.0
