--- a/server/src/main/resources/application.conf
+++ b/server/src/main/resources/application.conf
@@ -11,6 +11,12 @@ ktor {
     }
 }
 
+jwt {
+    secret = ${JELLYFISH_JWT_SECRET}
+    secretRefresh = ${JELLYFISH_JWT_SECRET_REFRESH}
+    realm = "jellyfish login-locked"
+}
+
 liquibase {
     master = "classpath:db/db.changelog-master.xml"
 }
