--- a/client/package.json
+++ b/client/package.json
@@ -6,15 +6,16 @@
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview --port 5050",
     "typecheck": "vue-tsc --noEmit",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
+    "deps": "npm-check -u"
   },
   "dependencies": {
-    "@vueuse/components": "^8.9.4",
-    "@vueuse/core": "^8.9.4",
-    "@vueuse/integrations": "^8.9.4",
+    "@vueuse/components": "^9.0.0",
+    "@vueuse/core": "^9.0.0",
+    "@vueuse/integrations": "^9.0.0",
     "axios": "^0.27.2",
     "fuse.js": "^6.6.2",
-    "pinia": "^2.0.16",
+    "pinia": "^2.0.17",
     "vue": "^3.2.37",
     "vue-router": "^4.1.2"
   },
@@ -27,13 +28,14 @@
     "@vue/tsconfig": "^0.1.3",
     "autoprefixer": "^10.4.7",
     "eslint": "^8.20.0",
-    "eslint-plugin-vue": "^9.2.0",
+    "eslint-plugin-vue": "^9.3.0",
+    "npm-check": "^6.0.1",
     "postcss": "^8.4.14",
     "prettier": "^2.7.1",
     "sass": "^1.54.0",
     "tailwindcss": "^3.1.6",
     "typescript": "^4.7.4",
-    "vite": "^3.0.2",
+    "vite": "^3.0.3",
     "vue-tsc": "^0.39.0"
   }
 }
