Add ability to choose upload folder location

--- a/server/src/main/resources/application.conf
+++ b/server/src/main/resources/application.conf
@@ -17,6 +17,10 @@ jwt {
     realm = "jellyfish login-locked"
 }
 
+jellyfish {
+    uploadFolder = ${?JELLYFISH_UPLOAD_FOLDER}
+}
+
 liquibase {
     master = "classpath:db/db.changelog-master.xml"
 }
