--- a/gradle.properties
+++ b/gradle.properties
@@ -6,6 +6,7 @@ exposed.version=0.38.2
 postgresql.version=42.4.0
 h2.version=2.1.214
 liquibase.version=4.14.0
+liquibase.logging.version=4.1.0
 hikaricp.version=5.0.1
 bcrypt.version=0.9.0
 logback.version=1.2.11
