Rework sessions cache

--- a/server/src/main/resources/application.conf
+++ b/server/src/main/resources/application.conf
@@ -12,7 +12,7 @@ ktor {
 }
 
 jwt {
-    secret = ${JELLYFISH_JWT_SECRET}
+    secretAccess = ${JELLYFISH_JWT_SECRET}
     secretRefresh = ${JELLYFISH_JWT_SECRET_REFRESH}
     realm = "jellyfish login-locked"
 }
