Store tokens expirations in environment variables

--- a/server/src/main/resources/application.conf
+++ b/server/src/main/resources/application.conf
@@ -11,14 +11,16 @@ ktor {
     }
 }
 
-jwt {
-    secretAccess = ${JELLYFISH_JWT_SECRET}
-    secretRefresh = ${JELLYFISH_JWT_SECRET_REFRESH}
-    realm = "jellyfish login-locked"
-}
-
 jellyfish {
     uploadFolder = ${?JELLYFISH_UPLOAD_FOLDER}
+
+    jwt {
+        secretAccess = ${JELLYFISH_JWT_SECRET}
+        expirationAccess = ${?JELLYFISH_JWT_EXPIRATION}
+        secretRefresh = ${JELLYFISH_JWT_SECRET_REFRESH}
+        expirationRefresh = ${?JELLYFISH_JWT_EXPIRATION_REFRESH}
+        realm = "jellyfish login-locked"
+    }
 }
 
 liquibase {
