Some tests for authentication

--- a/server/src/test/resources/application-auth-test.conf
+++ b/server/src/test/resources/application-auth-test.conf
@@ -1,3 +1,15 @@
+ktor {
+    environment = development
+
+    deployment {
+        port = 8080
+    }
+
+    application {
+        modules = [ com.kamelia.jellyfish.ApplicationKt.module ]
+    }
+}
+
 liquibase {
     master = "classpath:db/db.changelog-test.xml"
 }
@@ -7,9 +19,9 @@ jellyfish {
 
     jwt {
         secretAccess = ${JELLYFISH_JWT_SECRET}
-        expirationAccess = ${?JELLYFISH_JWT_EXPIRATION}
+        expirationAccess = 1000
         secretRefresh = ${JELLYFISH_JWT_SECRET_REFRESH}
-        expirationRefresh = ${?JELLYFISH_JWT_EXPIRATION_REFRESH}
+        expirationRefresh = 2000
         realm = "jellyfish login-locked"
     }
 }
