--- a/server/src/main/resources/hikari.properties
+++ b/server/src/main/resources/hikari.properties
@@ -1,6 +1,6 @@
 dataSourceClassName=org.postgresql.ds.PGSimpleDataSource
-dataSource.user=jellyfish
-dataSource.password=jellyfish
-dataSource.databaseName=jellyfish
+dataSource.user=hedera
+dataSource.password=hedera
+dataSource.databaseName=hedera
 dataSource.portNumber=5432
 dataSource.serverName=localhost
