--- a/server/src/test/resources/hikari.properties
+++ b/server/src/test/resources/hikari.properties
@@ -1,5 +1,5 @@
 driverClassName=org.h2.Driver
-jdbcUrl=jdbc:h2:mem:jellyfish;DB_CLOSE_ON_EXIT=FALSE
+jdbcUrl=jdbc:h2:mem:hedera;DB_CLOSE_ON_EXIT=FALSE
 dataSource.maximumPoolSize=3
 dataSource.isAutoCommit=false
 dataSource.transactionIsolation=TRANSACTION_REPEATABLE_READ
