Basic Nuxt config

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,16 +1,4 @@
 {
-  "extends": "@vue/tsconfig/tsconfig.web.json",
-  "include": ["env.d.ts", "src/**/*", "src/**/*.vue"],
-  "compilerOptions": {
-    "baseUrl": ".",
-    "paths": {
-      "@/*": ["./src/*"]
-    }
-  },
-  "types": ["node"],
-  "references": [
-    {
-      "path": "./tsconfig.vite-config.json"
-    }
-  ]
+  // https://nuxt.com/docs/guide/concepts/typescript
+  "extends": "./.nuxt/tsconfig.json"
 }
