--- a/client/package.json
+++ b/client/package.json
@@ -1,41 +1,18 @@
 {
-  "name": "client",
-  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build",
-    "preview": "vite preview --port 5050",
-    "typecheck": "vue-tsc --noEmit",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
-    "deps": "npm-check -u"
-  },
-  "dependencies": {
-    "@vueuse/components": "^9.0.0",
-    "@vueuse/core": "^9.0.0",
-    "@vueuse/integrations": "^9.0.0",
-    "axios": "^0.27.2",
-    "fuse.js": "^6.6.2",
-    "pinia": "^2.0.17",
-    "vue": "^3.2.37",
-    "vue-router": "^4.1.2"
+    "build": "nuxt build",
+    "dev": "nuxt dev",
+    "generate": "nuxt generate",
+    "preview": "nuxt preview",
+    "postinstall": "nuxt prepare",
+    "nuxi": "nuxi"
   },
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.1.4",
-    "@types/node": "^18.6.0",
-    "@vitejs/plugin-vue": "^3.0.1",
-    "@vue/eslint-config-prettier": "^7.0.0",
-    "@vue/eslint-config-typescript": "^11.0.0",
-    "@vue/tsconfig": "^0.1.3",
-    "autoprefixer": "^10.4.7",
-    "eslint": "^8.20.0",
-    "eslint-plugin-vue": "^9.3.0",
-    "npm-check": "^6.0.1",
-    "postcss": "^8.4.14",
-    "prettier": "^2.7.1",
-    "sass": "^1.54.0",
-    "tailwindcss": "^3.1.6",
-    "typescript": "^4.7.4",
-    "vite": "^3.0.3",
-    "vue-tsc": "^0.39.0"
+    "@antfu/eslint-config": "^0.35.1",
+    "eslint": "^8.33.0",
+    "nuxi": "^3.1.1",
+    "nuxt": "^3.1.1",
+    "typescript": "^4.9.5"
   }
 }
