--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,14 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.35.1",
+    "@vue-macros/nuxt": "^1.0.2",
+    "@vue-macros/volar": "^0.8.0",
+    "@vueuse/core": "^9.12.0",
+    "@vueuse/nuxt": "^9.12.0",
     "eslint": "^8.33.0",
     "nuxi": "^3.1.1",
     "nuxt": "^3.1.1",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "vue": "^3.2.45"
   }
 }
