--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,8 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "nuxi": "nuxi"
+    "nuxi": "nuxi",
+    "taze": "taze major -I"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.35.1",
@@ -17,6 +18,7 @@
     "eslint": "^8.33.0",
     "nuxi": "^3.1.1",
     "nuxt": "^3.1.1",
+    "taze": "^0.8.5",
     "typescript": "^4.9.5",
     "vue": "^3.2.45"
   }
