--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.35.1",
+    "@pinia/nuxt": "^0.4.6",
     "@vue-macros/nuxt": "^1.0.2",
     "@vue-macros/volar": "^0.8.0",
     "@vueuse/core": "^9.12.0",
@@ -18,6 +19,7 @@
     "eslint": "^8.33.0",
     "nuxi": "^3.1.1",
     "nuxt": "^3.1.1",
+    "pinia": "^2.0.30",
     "taze": "^0.8.5",
     "typescript": "^4.9.5",
     "vue": "^3.2.45"
