Added support for UnoCSS

--- a/client/.vscode/settings.json
+++ b/client/.vscode/settings.json
@@ -10,5 +10,7 @@
   "files.associations": {
     "*.css": "postcss"
   },
-  "editor.formatOnSave": false
+  "editor.formatOnSave": false,
+  "scss.lint.unknownAtRules": "ignore",
+  "css.lint.unknownAtRules": "ignore",
 }
