--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@antfu/eslint-config": "^0.35.1",
     "@iconify-json/tabler": "^1.1.57",
+    "@nuxtjs/critters": "^0.4.0",
     "@pinia/nuxt": "^0.4.6",
     "@unocss/nuxt": "^0.49.2",
     "@unocss/reset": "^0.49.2",
