--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@unocss/nuxt": "^0.49.2",
     "@unocss/reset": "^0.49.2",
     "@vue-macros/nuxt": "^1.0.2",
+    "@vue-macros/short-vmodel": "^1.1.0",
     "@vue-macros/volar": "^0.8.0",
     "@vueuse/core": "^9.12.0",
     "@vueuse/nuxt": "^9.12.0",
