--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,4 +1,10 @@
 {
   // https://nuxt.com/docs/guide/concepts/typescript
-  "extends": "./.nuxt/tsconfig.json"
+  "extends": "./.nuxt/tsconfig.json",
+  "vueCompilerOptions": {
+    "plugins": ["@vue-macros/volar/short-vmodel"],
+    "shortVmodel": {
+      "prefix": "::"
+    }
+  }
 }
