--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@antfu/eslint-config": "^0.35.1",
     "@iconify-json/tabler": "^1.1.57",
+    "@intlify/unplugin-vue-i18n": "^0.8.1",
     "@nuxt/image-edge": "1.0.0-27919678.2f5b64b",
     "@nuxtjs/critters": "^0.4.0",
     "@pinia/nuxt": "^0.4.6",
@@ -26,6 +27,7 @@
     "nuxi": "^3.1.1",
     "nuxt": "^3.1.1",
     "pinia": "^2.0.30",
-    "taze": "^0.8.5"
+    "taze": "^0.8.5",
+    "vue-i18n": "^9.2.2"
   }
 }
