--- a/server/src/main/resources/application.yaml
+++ b/server/src/main/resources/application.yaml
@@ -9,7 +9,7 @@ ktor:
       - com.kamelia.jellyfish.ApplicationKt.module
 
 liquibase:
-  master: "classpath:db/db.changelog-test.xml"
+  master: "classpath:db/db.changelog-master.xml"
 
 jellyfish:
   uploadFolder: "$JELLYFISH_UPLOAD_FOLDER:uploads"
