--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@iconify-json/tabler": "^1.1.57",
     "@intlify/unplugin-vue-i18n": "^0.8.1",
     "@nuxt/image-edge": "1.0.0-27919678.2f5b64b",
+    "@nuxtjs/color-mode": "^3.2.0",
     "@nuxtjs/critters": "^0.4.0",
     "@pinia/nuxt": "^0.4.6",
     "@unocss/nuxt": "^0.49.4",
