--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,8 @@
     "nuxi": "^3.1.1",
     "nuxt": "^3.1.1",
     "pinia": "^2.0.30",
+    "primeicons": "^6.0.1",
+    "primevue": "^3.23.0",
     "sass": "^1.58.0",
     "taze": "^0.8.5",
     "vue-i18n": "^9.2.2"
