Added nuxt module for primevue

--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@antfu/eslint-config": "^0.35.1",
     "@iconify-json/tabler": "^1.1.57",
     "@intlify/unplugin-vue-i18n": "^0.8.1",
+    "@notkamui/nuxt-primevue": "^0.1.0",
     "@nuxt/image-edge": "1.0.0-27919678.2f5b64b",
     "@nuxtjs/color-mode": "^3.2.0",
     "@nuxtjs/critters": "^0.4.0",
@@ -29,7 +30,6 @@
     "nuxi": "^3.1.1",
     "nuxt": "^3.1.1",
     "pinia": "^2.0.30",
-    "primeicons": "^6.0.1",
     "primevue": "^3.23.0",
     "sass": "^1.58.0",
     "taze": "^0.8.5",
