Added volar config

--- a/client/.vscode/settings.json
+++ b/client/.vscode/settings.json
@@ -13,4 +13,5 @@
   "editor.formatOnSave": false,
   "scss.lint.unknownAtRules": "ignore",
   "css.lint.unknownAtRules": "ignore",
+  "volar.inlayHints.eventArgumentInInlineHandlers": false,
 }
