--- a/client/package.json
+++ b/client/package.json
@@ -25,7 +25,11 @@
     "@vue-macros/short-vmodel": "^1.1.0",
     "@vue-macros/volar": "^0.8.0",
     "@vueuse/core": "^9.12.0",
+    "@vueuse/integrations": "^9.13.0",
     "@vueuse/nuxt": "^9.12.0",
+    "async-validator": "^4.2.5",
+    "axios": "^1.3.4",
+    "change-case": "^4.1.2",
     "class-variance-authority": "^0.4.0",
     "eslint": "^8.33.0",
     "nuxi": "^3.1.1",
@@ -34,6 +38,8 @@
     "primevue": "^3.23.0",
     "sass": "^1.58.0",
     "taze": "^0.8.5",
-    "vue-i18n": "^9.2.2"
+    "vue-i18n": "^9.2.2",
+    "vee-validate": "^4.8.4",
+    "yup": "^1.0.2"
   }
 }
