--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -2,7 +2,12 @@
   // https://nuxt.com/docs/guide/concepts/typescript
   "extends": "./.nuxt/tsconfig.json",
   "vueCompilerOptions": {
-    "plugins": ["@vue-macros/volar/short-vmodel"],
+    "plugins": [
+      "@vue-macros/volar/short-vmodel",
+      "@vue-macros/volar/define-models",
+      "@vue-macros/volar/define-props",
+      "@vue-macros/volar/define-props-refs"
+    ],
     "shortVmodel": {
       "prefix": "::"
     }
