--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "@nuxt/image-edge": "1.0.0-28008586.381b906",
     "@nuxtjs/color-mode": "^3.2.0",
     "@nuxtjs/critters": "^0.4.0",
+    "@pinia-plugin-persistedstate/nuxt": "^1.1.1",
     "@pinia/nuxt": "^0.4.8",
     "@unocss/nuxt": "^0.50.8",
     "@unocss/reset": "^0.50.8",
@@ -40,6 +41,7 @@
     "primevue": "^3.26.1",
     "sass": "^1.61.0",
     "taze": "^0.9.1",
+    "universal-cookie": "^4.0.4",
     "vee-validate": "^4.8.4",
     "vue-i18n": "^9.2.2",
     "yup": "^1.0.2"
