--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@iconify-json/tabler": "^1.1.71",
     "@intlify/unplugin-vue-i18n": "^0.10.0",
     "@notkamui/nuxt-primevue": "^0.1.1",
+    "@nuxt/devtools": "^0.4.0",
     "@nuxt/image-edge": "1.0.0-28008586.381b906",
     "@nuxtjs/color-mode": "^3.2.0",
     "@nuxtjs/critters": "^0.4.0",
