New CI attempt #6

--- a/gradle.properties
+++ b/gradle.properties
@@ -12,3 +12,6 @@ bcrypt.version=0.9.0
 logback.version=1.4.5
 kotlin.code.style=official
 junit.version=5.9.2
+
+# Disable Gradle welcome message
+org.gradle.internal.launcher.welcomeMessageEnabled=false
