Simple attempt to parallelize Gradle tasks

--- a/gradle.properties
+++ b/gradle.properties
@@ -15,3 +15,4 @@ junit.version=5.9.2
 
 # Disable Gradle welcome message
 org.gradle.internal.launcher.welcomeMessageEnabled=false
+org.gradle.parallel=true
