--- a/gradle.properties
+++ b/gradle.properties
@@ -16,3 +16,4 @@ junit.version=5.9.2
 # Disable Gradle welcome message
 org.gradle.internal.launcher.welcomeMessageEnabled=false
 org.gradle.parallel=true
+org.gradle.daemon=true
