--- a/gradle.properties
+++ b/gradle.properties
@@ -15,3 +15,7 @@ junit.version=5.9.2
 
 # Disable Gradle welcome message
 org.gradle.internal.launcher.welcomeMessageEnabled=false
+org.gradle.parallel=true
+org.gradle.daemon=true
+org.gradle.configureondemand=true
+org.gradle.jvmargs=-Xmx4G -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
