Added env var for application port (defaults to 8080)

--- a/server/src/main/resources/application.yaml
+++ b/server/src/main/resources/application.yaml
@@ -2,7 +2,7 @@ ktor:
   environment: "$HEDERA_ENV:prod"
 
   deployment:
-    port: 8080
+    port: "$HEDERA_PORT:8080"
 
   application:
     modules:
