Fixed docker compose

--- a/dev-hedera-docker/docker-compose.yml
+++ b/dev-hedera-docker/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     environment:
       - POSTGRES_USER=hedera
       - POSTGRES_PASSWORD=hedera
-      - DB_NAME=jellyfish
+      - DB_NAME=hedera
       - ALLOW_IP_RANGE=0.0.0.0/0
     ports:
       - "5432:5432"
