--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,7 @@
     "postinstall": "nuxt prepare",
     "nuxi": "nuxi",
     "taze": "taze major -I",
-    "lint": "eslint --ext .js,.ts,.vue --ignore-path .gitignore ."
+    "lint": "eslint --ext .js,.ts,.vue,.json ."
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.38.4",
