--- a/gradle.properties
+++ b/gradle.properties
@@ -15,3 +15,5 @@ junit.version=5.9.2
 
 # Disable Gradle welcome message
 org.gradle.internal.launcher.welcomeMessageEnabled=false
+org.gradle.daemon=true
+org.gradle.jvmargs=-Xmx4096m
