--- a/server/src/main/resources/application.yaml
+++ b/server/src/main/resources/application.yaml
@@ -20,5 +20,5 @@ hedera:
     secretRefresh: $HEDERA_JWT_SECRET_REFRESH
     expirationRefresh: "$HEDERA_JWT_EXPIRATION_REFRESH:2592000000" # Default 30 days
     secretWSToken: $HEDERA_JWT_SECRET_WS_TOKEN
-    expirationWSToken: "$HEDERA_JWT_EXPIRATION_WS_TOKEN:1800000" # Default 30 minutes
+    expirationWSToken: "$HEDERA_JWT_EXPIRATION_WS_TOKEN:300000" # Default 5 minutes
     realm: hedera login-locked
