--- a/server/src/test/resources/application.yaml
+++ b/server/src/test/resources/application.yaml
@@ -19,4 +19,6 @@ hedera:
     expirationAccess: 3600000 # Default 1 hour
     secretRefresh: $HEDERA_JWT_SECRET_REFRESH
     expirationRefresh: 2592000000 # Default 30 days
+    secretWSToken: $HEDERA_JWT_SECRET_WS_TOKEN
+    expirationWSToken: "$HEDERA_JWT_EXPIRATION_WS_TOKEN:300000" # Default 5 minutes
     realm: hedera login-locked
