--- a/client/package.json
+++ b/client/package.json
@@ -4,14 +4,12 @@
     "build": "nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
-    "generate:ci": "pnpm icons && nuxt generate",
     "preview": "nuxt preview",
     "il": "pnpm install --frozen-lockfile",
     "postinstall": "nuxt prepare",
     "nuxi": "nuxi",
     "taze": "taze major -I",
-    "lint": "eslint --ext .js,.ts,.vue,.json .",
-    "lint:ci": "node ./scripts/eslint-format.cjs",
+    "lint": "node ./scripts/eslint-format.cjs",
     "icons": "node ./scripts/export-icons.cjs"
   },
   "devDependencies": {
