--- a/client/package.json
+++ b/client/package.json
@@ -3,14 +3,15 @@
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
-    "generate": "nuxt generate",
+    "generate": "nuxt generate && pnpm minify",
     "preview": "nuxt preview",
     "il": "pnpm install --frozen-lockfile",
     "postinstall": "nuxt prepare",
     "nuxi": "nuxi",
     "taze": "taze major -I",
     "lint": "node ./scripts/eslint-format.cjs",
-    "icons": "node ./scripts/export-icons.cjs"
+    "icons": "node ./scripts/export-icons.cjs",
+    "minify": "node ./scripts/css-minify.cjs"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.39.5",
@@ -34,6 +35,7 @@
     "axios": "^1.4.0",
     "axios-auth-refresh": "^3.3.6",
     "class-variance-authority": "^0.6.0",
+    "clean-css": "^5.3.2",
     "eslint": "^8.43.0",
     "nuxi": "^3.5.3",
     "nuxt": "^3.5.3",
