--- a/client/package.json
+++ b/client/package.json
@@ -39,6 +39,7 @@
     "eslint": "^8.43.0",
     "nuxi": "^3.5.3",
     "nuxt": "^3.5.3",
+    "ofetch": "^1.1.1",
     "pinia": "^2.1.4",
     "primevue": "^3.29.2",
     "sass": "^1.63.4",
