--- a/client/package.json
+++ b/client/package.json
@@ -37,9 +37,11 @@
     "class-variance-authority": "^0.6.0",
     "clean-css": "^5.3.2",
     "eslint": "^8.43.0",
+    "nitropack": "^2.5.2",
     "nuxi": "^3.5.3",
     "nuxt": "^3.5.3",
     "ofetch": "^1.1.1",
+    "ohash": "^1.1.2",
     "pinia": "^2.1.4",
     "primevue": "^3.29.2",
     "sass": "^1.63.4",
