backend: upgrade dependencies (not liquibase because liquibase cringe)

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
 project.version=0.1.0
 jvm.version=17
-kotlin.version=1.8.10
-ktor.version=2.3.1
-coroutines.version=1.7.0-Beta
+kotlin.version=1.9.0
+ktor.version=2.3.2
+coroutines.version=1.7.2
 exposed.version=0.41.1
 postgresql.version=42.6.0
 h2.version=2.1.214
@@ -10,9 +10,9 @@ liquibase.version=4.16.1
 liquibase.logging.version=5.0.0
 hikaricp.version=5.0.1
 bcrypt.version=0.10.2
-logback.version=1.4.6
+logback.version=1.4.8
 kotlin.code.style=official
-junit.version=5.9.2
+junit.version=5.9.3
 
 # Disable Gradle welcome message
 org.gradle.internal.launcher.welcomeMessageEnabled=false
