Fuzzy search (wip)

--- a/dev-hedera-docker/docker-compose.yml
+++ b/dev-hedera-docker/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       - POSTGRES_PASSWORD=hedera
       - DB_NAME=hedera
       - ALLOW_IP_RANGE=0.0.0.0/0
+      - POSTGRES_EXTENSIONS=pg_trgm
     ports:
       - "5432:5432"
     volumes:
