--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "@nuxtjs/critters": "^0.5.0",
     "@pinia-plugin-persistedstate/nuxt": "^1.1.1",
     "@pinia/nuxt": "^0.4.11",
+    "@types/luxon": "^3.3.1",
     "@unocss/nuxt": "^0.53.5",
     "@unocss/reset": "^0.53.5",
     "@vue-macros/nuxt": "^1.3.18",
@@ -33,6 +34,7 @@
     "@vueuse/nuxt": "^10.2.1",
     "clean-css": "^5.3.2",
     "eslint": "^8.45.0",
+    "luxon": "^3.3.0",
     "nitropack": "^2.5.2",
     "nuxi": "^3.6.3",
     "nuxt": "^3.6.3",
