--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,6 @@
     "@iconify-json/tabler": "^1.1.96",
     "@iconify/tools": "^3.0.5",
     "@intlify/unplugin-vue-i18n": "^1.5.0",
-    "@notkamui/nuxt-primevue": "^0.5.0",
     "@nuxt/devtools": "^1.0.0",
     "@nuxtjs/color-mode": "^3.3.0",
     "@nuxtjs/critters": "^0.5.1",
@@ -40,10 +39,11 @@
     "nitropack": "^2.7.2",
     "nuxi": "^3.9.1",
     "nuxt": "^3.8.0",
+    "nuxt-primevue": "^0.1.0",
     "ofetch": "^1.3.3",
     "ohash": "^1.1.3",
     "pinia": "^2.1.7",
-    "primevue": "^3.29.2",
+    "primevue": "^3.39.0",
     "sass": "^1.69.5",
     "taze": "^0.12.0",
     "universal-cookie": "^6.1.1",
