--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,8 @@
     "taze": "taze major -I",
     "lint": "node ./scripts/eslint-format.cjs",
     "icons": "node ./scripts/export-icons.cjs",
-    "minify": "node ./scripts/css-minify.cjs"
+    "minify": "node ./scripts/css-minify.cjs",
+    "tsc": "tsc --noEmit"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.39.7",
@@ -46,6 +47,7 @@
     "primevue": "^3.39.0",
     "sass": "^1.69.5",
     "taze": "^0.12.0",
+    "typescript": "^5.2.2",
     "universal-cookie": "^6.1.1",
     "vee-validate": "^4.11.8",
     "vue-i18n": "^9.6.4",
