--- a/client/package.json
+++ b/client/package.json
@@ -38,13 +38,14 @@
     "eslint": "^8.54.0",
     "luxon": "^3.4.4",
     "nitropack": "^2.8.0",
+    "normalize.css": "^8.0.1",
     "nuxi": "^3.10.0",
     "nuxt": "^3.8.2",
     "nuxt-primevue": "^0.2.1",
     "ofetch": "^1.3.3",
     "ohash": "^1.1.3",
     "pinia": "^2.1.7",
-    "primevue": "^3.41.1",
+    "primevue": "^3.42.0",
     "sass": "^1.69.5",
     "taze": "^0.12.1",
     "typescript": "^5.3.2",
