--- a/client/package.json
+++ b/client/package.json
@@ -12,14 +12,13 @@
     "lint": "node ./scripts/eslint-format.cjs",
     "icons": "node ./scripts/export-icons.cjs",
     "minify": "node ./scripts/css-minify.cjs",
-    "tsc": "tsc --noEmit"
+    "tsc": "tsc --noEmit && vue-tsc --noEmit"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.39.7",
     "@iconify-json/tabler": "^1.1.98",
     "@iconify/tools": "^3.0.6",
     "@intlify/unplugin-vue-i18n": "^1.5.0",
-    "@nuxt/devtools": "^1.0.3",
     "@nuxtjs/color-mode": "^3.3.2",
     "@nuxtjs/critters": "^0.5.1",
     "@pinia-plugin-persistedstate/nuxt": "^1.2.0",
@@ -52,6 +51,7 @@
     "universal-cookie": "^6.1.1",
     "vee-validate": "^4.11.8",
     "vue-i18n": "^9.7.1",
+    "vue-tsc": "^1.8.24",
     "yup": "^1.3.2"
   }
 }
