--- a/server/src/test/resources/application-auth-test.yaml
+++ b/server/src/test/resources/application-auth-test.yaml
@@ -12,8 +12,8 @@ liquibase:
   master: "classpath:db/db.changelog-test.xml"
 
 hedera:
-  uploadFolder: ./_tests/upload
-  globalConfigurationFile: ./_tests/global_configuration.json
+  uploadFolder: _tests/upload
+  globalConfigurationFile: _tests/global_configuration.json
   loginThrottle: "1500"
 
   jwt:
