--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,7 @@
     "@vue-macros/volar": "^0.17.4",
     "@vueuse/core": "^10.7.0",
     "@vueuse/nuxt": "^10.7.0",
+    "blurhash": "^2.0.5",
     "clean-css": "^5.3.3",
     "eslint": "^8.55.0",
     "luxon": "^3.4.4",
@@ -51,6 +52,7 @@
     "vee-validate": "^4.12.2",
     "vue-i18n": "^9.8.0",
     "vue-tsc": "^1.8.25",
+    "vue3-blurhash": "^1.0.1",
     "yup": "^1.3.2"
   }
 }
