Thumbnail generation service + blurhash

--- a/server/src/test/resources/application.yaml
+++ b/server/src/test/resources/application.yaml
@@ -13,6 +13,7 @@ liquibase:
 
 hedera:
   uploadFolder: _tests/upload
+  thumbnailFolder: _tests/thumbnails
   globalConfigurationFile: _tests/global_configuration.json
   loginThrottle: "0"
 
