--- a/server/src/main/resources/application.yaml
+++ b/server/src/main/resources/application.yaml
@@ -12,6 +12,7 @@ liquibase:
   master: "classpath:db/db.changelog-master.xml"
 
 hedera:
+  url: "$HEDERA_URL:http://localhost:3000"
   uploadFolder: "$HEDERA_UPLOAD_FOLDER:uploads"
   globalConfigurationFile: "$HEDERA_GLOBAL_CONFIGURATION_FILE:global_configuration.json"
   searchMaxDistance: "$HEDERA_SEARCH_MAX_DISTANCE:0.85"
