--- a/client/.vscode/extensions.json
+++ b/client/.vscode/extensions.json
@@ -7,7 +7,7 @@
     "dbaeumer.vscode-eslint",
     "vue.volar",
     "lokalise.i18n-ally",
-    "garaioag.garaio-vscode-unwanted-recommendations"
+    "soulcode.vscode-unwanted-extensions"
   ],
   "unwantedRecommendations": [
     "vscode.typescript-language-features",
