Added mailhog config to dev docker-compose.yml

--- a/dev-hedera-docker/docker-compose.yml
+++ b/dev-hedera-docker/docker-compose.yml
@@ -14,6 +14,13 @@ services:
     volumes:
       - data:/var/lib/postgresql/data
     restart: unless-stopped
+  mailhog:
+    image: mailhog/mailhog
+    container_name: mailhog
+    ports:
+      - "1025:1025"
+      - "8025:8025"
+    restart: unless-stopped
 
 volumes:
   data:
