Fix env variables

--- a/server/src/main/resources/application.yaml
+++ b/server/src/main/resources/application.yaml
@@ -40,7 +40,7 @@ hedera:
     port: "$HEDERA_MAIL_PORT:587"
     tls: "$HEDERA_MAIL_TLS:true"
     auth: "$HEDERA_MAIL_AUTH:true"
-    username: "$HEDERA_MAIL_USERNAME"
-    password: "$HEDERA_MAIL_PASSWORD"
+    username: "$HEDERA_MAIL_USERNAME:"
+    password: "$HEDERA_MAIL_PASSWORD:"
     from: "$HEDERA_MAIL_FROM"
     fromName: "$HEDERA_MAIL_FROM_NAME:Hedera"
