client dependency upgrades

--- a/client/.vscode/settings.json
+++ b/client/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
+  "eslint.experimental.useFlatConfig": true,
   "i18n-ally.sourceLanguage": "en",
   "i18n-ally.keystyle": "nested",
   "i18n-ally.localesPaths": "locales",
