--- a/client/package.json
+++ b/client/package.json
@@ -1,4 +1,5 @@
 {
+  "type": "module",
   "private": true,
   "scripts": {
     "build": "nuxt build",
@@ -9,49 +10,49 @@
     "postinstall": "nuxt prepare",
     "nuxi": "nuxi",
     "taze": "taze major -I",
-    "lint": "node ./scripts/eslint-format.cjs",
+    "lint": "eslint .",
     "icons": "node ./scripts/export-icons.cjs",
     "minify": "node ./scripts/css-minify.cjs",
     "tsc": "tsc --noEmit && vue-tsc --noEmit"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.39.7",
-    "@iconify-json/tabler": "^1.1.100",
-    "@iconify/tools": "^3.0.7",
-    "@intlify/unplugin-vue-i18n": "^1.5.0",
+    "@antfu/eslint-config": "^2.6.4",
+    "@iconify-json/tabler": "^1.1.105",
+    "@iconify/tools": "^4.0.2",
+    "@intlify/unplugin-vue-i18n": "^2.0.0",
     "@nuxtjs/color-mode": "^3.3.2",
-    "@nuxtjs/critters": "^0.5.2",
+    "@nuxtjs/critters": "^0.6.0",
     "@pinia-plugin-persistedstate/nuxt": "^1.2.0",
     "@pinia/nuxt": "^0.5.1",
-    "@types/luxon": "^3.3.7",
-    "@unocss/nuxt": "^0.58.0",
-    "@vee-validate/nuxt": "^4.12.2",
-    "@vee-validate/yup": "^4.12.2",
-    "@vue-macros/nuxt": "^1.9.7",
-    "@vue-macros/short-vmodel": "^1.4.0",
-    "@vue-macros/volar": "^0.17.4",
-    "@vueuse/core": "^10.7.0",
-    "@vueuse/nuxt": "^10.7.0",
+    "@types/luxon": "^3.4.2",
+    "@unocss/nuxt": "^0.58.5",
+    "@vee-validate/nuxt": "^4.12.5",
+    "@vee-validate/yup": "^4.12.5",
+    "@vue-macros/nuxt": "^1.9.21",
+    "@vue-macros/short-vmodel": "^1.4.2",
+    "@vue-macros/volar": "^0.18.11",
+    "@vueuse/core": "^10.8.0",
+    "@vueuse/nuxt": "^10.8.0",
     "blurhash": "^2.0.5",
     "clean-css": "^5.3.3",
-    "eslint": "^8.55.0",
+    "eslint": "^8.56.0",
     "luxon": "^3.4.4",
     "nitropack": "^2.8.1",
     "normalize.css": "^8.0.1",
-    "nuxi": "^3.10.0",
-    "nuxt": "^3.9.0",
-    "nuxt-primevue": "^0.2.2",
+    "nuxi": "^3.10.1",
+    "nuxt": "^3.10.2",
+    "nuxt-primevue": "^0.3.0",
     "ofetch": "^1.3.3",
     "ohash": "^1.1.3",
     "pinia": "^2.1.7",
-    "primevue": "^3.43.0",
-    "sass": "^1.69.5",
-    "taze": "^0.13.0",
+    "primevue": "^3.48.1",
+    "sass": "^1.71.1",
+    "taze": "^0.13.3",
     "typescript": "^5.3.3",
-    "universal-cookie": "^6.1.1",
-    "vee-validate": "^4.12.2",
-    "vue-i18n": "^9.8.0",
-    "vue-tsc": "^1.8.25",
-    "yup": "^1.3.2"
+    "universal-cookie": "^7.0.2",
+    "vee-validate": "^4.12.5",
+    "vue-i18n": "^9.9.1",
+    "vue-tsc": "^1.8.27",
+    "yup": "^1.3.3"
   }
 }
